--- a/Dimensionality_Reduction_(IRIS).ipynb
+++ b/Dimensionality_Reduction_(IRIS).ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Dimensionality Reduction (IRIS).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmV3+RpPYymsJT/nb4SsNx",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMqQlfRAbJrAXKRO2qLIGu/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +46,7 @@
         "import plotly.express as px\n",
         "import scipy.stats"
       ],
-      "execution_count": 42,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -273,18 +274,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4VQj_BT1Nk2K",
-        "outputId": "99ff1202-0909-4095-9e15-db5654e8a4e9"
+        "outputId": "f077d74d-b3fb-4d2b-d4fa-bed90e334dbe"
       },
       "source": [
-        "print('Variance explained by the First 2 PCs = ', np.cumsum(var.explained_variance_ratio_ * 100)[1])"
+        "print('n_components = 2 ', np.cumsum(var.explained_variance_ratio_ * 100)[1])"
       ],
-      "execution_count": 33,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Variance explained by the First 2 PCs =  97.7685206318795\n"
+            "n_components = 2  97.7685206318795\n"
           ]
         }
       ]
@@ -296,7 +297,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uE3KMHLINqr_",
-        "outputId": "833b21cf-5085-4b36-b27f-131acafec299"
+        "outputId": "8bbc4935-5926-4476-9a6e-4ffd6f8e647b"
       },
       "source": [
         "res = decomposition.PCA(3)\n",
@@ -304,7 +305,7 @@
         " \n",
         "Data.shape"
       ],
-      "execution_count": 37,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,7 +315,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 127
         }
       ]
     },
@@ -325,18 +326,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AkfKT_WZOBxD",
-        "outputId": "5c84c85c-07c3-4951-aac2-d937a91fae37"
+        "outputId": "0f35d6bf-3e5f-4bf4-dae7-0825e8bb027f"
       },
       "source": [
-        "print('Variance explained by the 3 components = ', np.cumsum(res.explained_variance_ratio_ * 100)[2])"
+        "print('n_component = 3 ', np.cumsum(res.explained_variance_ratio_ * 100)[2])"
       ],
-      "execution_count": 39,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Variance explained by the 3 components =  99.47878161267248\n"
+            "n_component = 3  99.47878161267248\n"
           ]
         }
       ]
@@ -856,7 +857,7 @@
         "outputId": "b46368e2-b51e-406a-c6cb-6ec3bf3647b9"
       },
       "source": [
-        " #first 5 elements of the transformed matrix\n",
+        " #first 5 elements\n",
         "print(\"Transformed Matrix:\")\n",
         "print(mat[:5])"
       ],
@@ -883,18 +884,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z6XCSODuUSar",
-        "outputId": "54ace925-412e-440a-f52e-a3ddf6afbd51"
+        "outputId": "b60c8efc-17f0-4c93-e72d-8160bdcd6178"
       },
       "source": [
-        "print('Variance explained by the First 2 PCs = ', np.cumsum(svd.explained_variance_ratio_ * 100)[1])"
+        "print('n_components = 2 ', np.cumsum(svd.explained_variance_ratio_ * 100)[1])"
       ],
-      "execution_count": 81,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Variance explained by the First 2 PCs =  95.81320720000176\n"
+            "n_components = 2  95.81320720000176\n"
           ]
         }
       ]
@@ -1532,7 +1533,7 @@
         "from sklearn import manifold, datasets\n",
         "from sklearn.decomposition import PCA"
       ],
-      "execution_count": 119,
+      "execution_count": 131,
       "outputs": []
     },
     {
